stages/stage2/k8s/apps/search/search-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search
  namespace: apollo-airlines-apps
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      serviceAccountName: apollo11-apps
      containers:
        - name: search
          image: apollo11/search:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8083
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8083
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readyz
              port: 8083
            initialDelaySeconds: 5
            periodSeconds: 5
