stages/stage2/k8s/apps/search/search-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: search
  namespace: apollo-airlines-apps
spec:
  selector:
    app: search
  ports:
    - port: 8083
      targetPort: 8083
