stages/stage2/k8s/apps/search/search-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: search-allow-specific
  namespace: apollo-airlines-apps
spec:
  podSelector:
    matchLabels:
      app: search
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8083
  policyTypes:
    - Ingress
